--- a/index.html
+++ b/index.html
@@ -106,6 +106,22 @@ textarea {
   font-size:13px;
   display:none;
 }
+  /* ===== PC 화면 대응 (필수) ===== */
+@media (min-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
+
+  .product {
+    align-items: center;
+  }
+
+  .product img {
+    width: 110px;
+    height: 110px;
+  }
+}
+
 </style>
 </head>
 
@@ -281,3 +297,4 @@ document.getElementById("copyBtn").onclick = () => {
 
 </body>
 </html>
+
