--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@ h1 { text-align:center; margin-bottom:20px; }
   border-bottom:1px solid #eee;
 }
 .product img {
-  width:90px;
-  height:90px;
-  border-radius:10px;
-  object-fit:cover;
-  background:#ddd;
+  width: 140px;
+  height: 140px;
+  border-radius: 14px;
+  object-fit: cover;
+  background: #f2f2f2;
 }
 .name { font-weight:600; }
 .price { color:#2f80ed; font-weight:700; margin:6px 0; }
@@ -297,4 +297,5 @@ document.getElementById("copyBtn").onclick = () => {
 
 </body>
 </html>
+
 
