--- a/index.html
+++ b/index.html
@@ -121,6 +121,26 @@ textarea {
     height: 110px;
   }
 }
+body {
+  background: linear-gradient(180deg, #f6f7f9, #eef1f5);
+}
+
+h1 {
+  font-size: 22px;
+  letter-spacing: -0.3px;
+}
+
+.price {
+  color: #111;
+}
+
+#orderBtn {
+  background: linear-gradient(135deg, #2f80ed, #56a0ff);
+}
+
+#copyBtn {
+  background: linear-gradient(135deg, #27ae60, #4cd17d);
+}
 
 </style>
 </head>
@@ -297,5 +317,6 @@ document.getElementById("copyBtn").onclick = () => {
 
 </body>
 </html>
+
 
 
